--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,6 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
-    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -47,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "react-scripts": "5.0.1",
     "tailwindcss": "^3.3.5"
   }
 }
