--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "server": "cd server && nodemon index.js",
     "client": "npm start --prefix ./client",
     "flask": "cd AI-Section && python app.py",
-    "all": "concurrently \"npm run server\" \"npm run client\" \"npm run flask\"" ,
+    "all": "concurrently \"npm run server\" \"npm run client\" \"npm run flask\"",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "app": "concurrently \"npm run dev\" \"npm run flask\""
   },
@@ -21,7 +21,6 @@
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
-    "concurrently": "^8.2.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
@@ -30,5 +29,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1"
+  },
+  "devDependencies": {
+    "concurrently": "8.2.2"
   }
 }
